--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batmobile attack</title>
-</head>
-<body>
-    
-</body>
+    <!-- CSS -->
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="./src/css/styles.css" />
+
+    <!-- JS -->
+    <script type="importmap">
+      {
+        "imports": {
+          "animejs": "./node_modules/animejs/dist/bundles/anime.esm.min.js",
+          "chart.js/auto": "./node_modules/chart.js/auto/auto.js",
+          "@kurkle/color": "./node_modules/@kurkle/color/dist/color.esm.js",
+          "maplibre-gl": "https://esm.sh/maplibre-gl@5.13.0",
+          "zzz": "https://esm.sh/zdog"
+        }
+      }
+    </script>
+    <script src="./src/js/animejs.js" type="module"></script>
+    <script src="./src/js/chartjs.js" type="module"></script>
+    <script src="./src/js/maplibre.js" type="module"></script>
+    <script src="./src/js/tonejs.js" type="module"></script>
+    <script src="./src/js/vfx.js" type="module"></script>
+    <script src="./src/js/zdog.js" type="module"></script>
+  </head>
+
+  <body></body>
 </html>
