--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           "chart.js/auto": "./node_modules/chart.js/auto/auto.js",
           "@kurkle/color": "./node_modules/@kurkle/color/dist/color.esm.js",
           "maplibre-gl": "https://esm.sh/maplibre-gl@5.13.0",
-          "zzz": "https://esm.sh/zdog"
+          "zdog": "https://esm.sh/zdog@1.1.3",
+          "tone.js": "https://unpkg.com/tone"
         }
       }
     </script>
@@ -35,5 +36,60 @@
     <script src="./src/js/zdog.js" type="module"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div id="hud-grid">
+      <!-- SECTION BLEUE — MISSILES -->
+      <section id="missile-system" class="hud-section blue">
+        <div class="module-title">MISSILE SYSTEM</div>
+
+        <button id="shoot-btn" class="btn btn-danger w-100">
+          <i class="bi bi-crosshair2"></i>
+          <br />
+          SHOOT
+        </button>
+
+        <div class="placeholder" id="hit-status-placeholder">HIT / NO HIT</div>
+
+        <div class="placeholder" id="time-placeholder">CLOCK</div>
+
+        <div class="placeholder" id="arming-placeholder">ARMING MISSILE</div>
+      </section>
+
+      <!-- SECTION JAUNE — DONNÉES CIBLE -->
+      <section id="target-data" class="hud-section yellow">
+        <div class="module-title">TARGET STATUS</div>
+
+        <div class="placeholder animejs" id="lock-status-placeholder">
+          LOCKED IN/LOCKED OUT
+        </div>
+
+        <div class="placeholder chart" id="distance-chart">
+          TARGET’S DISTANCE
+        </div>
+
+        <div class="placeholder animejs" id="temp-chart">TARGET’S TEMP</div>
+
+        <div class="placeholder chart" id="occupants-chart">
+          TARGETED OCCUPANTS AGE
+        </div>
+      </section>
+
+      <!-- SECTION ROUGE — ÉTAT DU VÉHICULE -->
+      <section id="vehicle-status" class="hud-section red">
+        <div class="module-title">VEHICLE STATUS</div>
+
+        <div class="toggle-row">
+          <span>MANUAL/AUTO DRIVING MODE</span>
+          <button class="btn btn-secondary btn-sm">SWITCH</button>
+        </div>
+
+        <div class="toggle-row">
+          <span>SELF DESTRUCTION</span>
+          <button class="btn btn-danger btn-sm">EXPLODE</button>
+        </div>
+
+        <div class="placeholder map" id="vehicle-map-placeholder">MAP</div>
+      </section>
+    </div>
+  </body>
 </html>
