--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           "chart.js/auto": "./node_modules/chart.js/auto/auto.js",
           "@kurkle/color": "./node_modules/@kurkle/color/dist/color.esm.js",
           "maplibre-gl": "https://esm.sh/maplibre-gl@5.13.0",
-          "zdog": "https://esm.sh/zdog@1.1.3",
-          "tone.js": "https://unpkg.com/tone"
+          "tone.js": "https://unpkg.com/tone",
+          "vfx.js": "https://esm.sh/@vfx-js/core",
+          "zdog": "https://esm.sh/zdog@1.1.3"
         }
       }
     </script>
@@ -48,35 +49,43 @@
           SHOOT
         </button>
 
-        <div class="placeholder" id="hit-status-placeholder">HIT / NO HIT</div>
+        <div class="placeholder animejs" id="hit-status-placeholder">
+          HIT / NO HIT
+        </div>
 
-        <div class="placeholder" id="time-placeholder">CLOCK</div>
+        <div class="placeholder zdog" id="time-placeholder">CLOCK</div>
 
-        <div class="placeholder" id="arming-placeholder">ARMING MISSILE</div>
+        <div class="placeholder chartjs" id="arming-placeholder">
+          <canvas id="radarChart"></canvas>
+        </div>
       </section>
 
       <!-- SECTION JAUNE — DONNÉES CIBLE -->
       <section id="target-data" class="hud-section yellow">
         <div class="module-title">TARGET STATUS</div>
 
-        <div class="placeholder animejs" id="lock-status-placeholder">
-          LOCKED IN/LOCKED OUT
-        </div>
-
-        <div class="placeholder chart" id="distance-chart">
+        <div class="placeholder chartjs" id="distance-chart">
           TARGET’S DISTANCE
         </div>
 
         <div class="placeholder animejs" id="temp-chart">TARGET’S TEMP</div>
 
-        <div class="placeholder chart" id="occupants-chart">
-          TARGETED OCCUPANTS AGE
+        <div class="placeholder chartjs" id="occupants-chart">
+          <canvas id="polarChart"></canvas>
         </div>
       </section>
 
       <!-- SECTION ROUGE — ÉTAT DU VÉHICULE -->
       <section id="vehicle-status" class="hud-section red">
         <div class="module-title">VEHICLE STATUS</div>
+        <div class="placeholder vfx.js" id="lock-status-placeholder">
+          <img
+            src="./assets/img/batmobile 3D.png"
+            alt="Vue 3D de la Batmobile"
+            id="batmobile-img"
+            style="max-width: 100%; max-height: 100%; object-fit: contain"
+          />
+        </div>
 
         <div class="toggle-row">
           <span>MANUAL/AUTO DRIVING MODE</span>
