--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batmobile attack</title>
-    <!-- CSS -->
     <link
       rel="stylesheet"
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -15,7 +14,6 @@
     />
     <link rel="stylesheet" href="./src/css/styles.css" />
 
-    <!-- sources technologies JS -->
     <script type="importmap">
       {
         "imports": {
@@ -23,7 +21,7 @@
           "chart.js/auto": "./node_modules/chart.js/auto/auto.js",
           "@kurkle/color": "./node_modules/@kurkle/color/dist/color.esm.js",
           "maplibre-gl": "https://esm.sh/maplibre-gl@5.13.0",
-          "tone.js": "https://unpkg.com/tone",
+          "tone.js": "https://esm.sh/tone@15.1.22",
           "vfx.js": "https://esm.sh/@vfx-js/core",
           "zdog": "https://esm.sh/zdog@1.1.3"
         }
@@ -43,7 +41,7 @@
       <section id="missile-system" class="hud-section missile">
         <div class="module-title"><p>MISSILE SYSTEM</p></div>
 
-        <button id="shoot-btn" class="btn btn-danger w-100">
+        <button id="shoot-btn" class="btn btn-warning w-100">
           <i class="bi bi-crosshair2"></i>
           <br />
           SHOOT
@@ -87,13 +85,21 @@
         </div>
 
         <div class="toggle-row">
-          <span>MANUAL/AUTO DRIVING MODE</span>
-          <button class="btn btn-secondary btn-sm">SWITCH</button>
+          <span>
+            DRIVING MODE
+            <i class="bi bi-speedometer text-warning"></i>
+          </span>
+          <button id="switch-btn" class="btn btn-primary btn-sm">SWITCH</button>
         </div>
 
         <div class="toggle-row">
-          <span>SELF DESTRUCTION</span>
-          <button class="btn btn-danger btn-sm">EXPLODE</button>
+          <span>
+            SELF DESTRUCTION
+            <i class="bi bi-fire text-warning"></i>
+          </span>
+          <button id="explode-btn" class="btn btn-warning btn-sm">
+            EXPLODE
+          </button>
         </div>
 
         <div class="placeholder zdog" id="time-placeholder">CLOCK</div>
