--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="placeholder animejs" id="hit-status-placeholder">
           HIT / NO HIT
         </div>
+
         <div class="placeholder map" id="vehicle-map-placeholder">
           <div id="carte"></div>
         </div>
@@ -64,10 +65,12 @@
         <div class="module-title">TARGET STATUS</div>
 
         <div class="placeholder chartjs" id="distance-chart">
-          TARGET’S DISTANCE
+          TARGET’S DISTANCE chart js aussiiiiiiiiiii???
         </div>
 
-        <div class="placeholder animejs" id="temp-chart">TARGET’S TEMP</div>
+        <div class="placeholder chartjs" id="targets-temp">
+          <canvas id="bar"></canvas>
+        </div>
 
         <div class="placeholder chartjs" id="occupants-chart">
           <canvas id="polarChart"></canvas>
