--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           SHOOT
         </button>
 
-        <div class="placeholder animejs" id="target-hit">
+        <div class="placeholder animejs1" id="target-hit">
           <p>OPPONENT HIT</p>
         </div>
 
@@ -57,7 +57,7 @@
           <div id="carte"></div>
         </div>
 
-        <div class="placeholder chartjs" id="arming-placeholder">
+        <div class="placeholder chartjs1" id="arming-placeholder">
           <canvas id="radarChart"></canvas>
         </div>
       </section>
@@ -66,15 +66,15 @@
       <section id="target-data" class="hud-section target">
         <div class="module-title">TARGET STATUS</div>
 
-        <div class="placeholder chartjs" id="targets-temp">
+        <div class="placeholder chartjs2" id="targets-temp">
           <canvas id="bar"></canvas>
         </div>
 
-        <div class="placeholder anime.js" id="distance-animejs">
+        <div class="placeholder animejs2" id="distance-animejs">
           <p>TARGETS' DISTANCE</p>
         </div>
 
-        <div class="placeholder chartjs" id="occupants-chart">
+        <div class="placeholder chartjs3" id="occupants-chart">
           <canvas id="polarChart"></canvas>
         </div>
       </section>
