ZDOG + Finaliser l'aspect esthétique du projet

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </button>
 
         <div class="placeholder animejs1" id="target-hit">
-          <p>OPPONENT HIT</p>
+          <h2>OPPONENT HIT</h2>
         </div>
 
         <div class="placeholder map" id="vehicle-map-placeholder">
@@ -72,7 +72,7 @@
         </div>
 
         <div class="placeholder animejs2" id="distance-animejs">
-          <p class="distance-text">TARGETS' DISTANCE : 0 m</p>
+          <h3 class="distance-text">TARGETS' DISTANCE : 0 m</h3>
         </div>
 
         <div class="placeholder chartjs3" id="occupants-chart">
@@ -109,6 +109,7 @@
         </div>
 
         <div class="placeholder zdog" id="logo-placeholder">
+          <h2>Vehicle core</h2>
           <canvas id="zdog-canvas"></canvas>
         </div>
       </section>
